--- a/vote/static/style.css
+++ b/vote/static/style.css
@@ -26,14 +26,14 @@ input[type="password"] {
 	width: 100%;
 }
 
-.window {
-	width: 400px;
+#content {
+	width: 500px;
 	margin: auto;
 }
 
 #title-buffer {
 	width: 100%;
-	height: 50px;
+	height: 52px;
 	top: 0px;
 	position: static;
 }
@@ -46,24 +46,24 @@ input[type="password"] {
 	border-bottom: solid #444444;
 }
 
-.title {
+#title {
 	width: 60%;
 	margin: auto;
 	font-variant: small-caps;
 	font-size: 200%;
 	text-align: center;
-	padding: 10px;
+	padding: 10px 0px;
 }
 
-.back {
-	width: 20%;
+#back {
+	width: calc(20% - 20px);
 	float: left;
 	text-align: left;
 	padding: 10px;
 }
 
-.user {
-	width: 20%;
+#user {
+	width: calc(20% - 20px);
 	float: right;
 	text-align: right;
 	padding: 10px;
