--- a/vote/templates/base.html
+++ b/vote/templates/base.html
@@ -25,7 +25,7 @@
 				{% if user %}
 					Logged in as {{user.name}}. <a href="{{ url_for('logout') }}">Log out.</a>
 					{% if user.is_admin() %}
-						<br/><a href="{{ url_for('close', type=type) }}">Close Voting</a>
+						<br/><a href="{{ url_for('close') }}">Close Voting</a>
 						<br/><a href="{{ url_for('clear') }}">Clear Votes</a>
 					{% endif %}
 				{% endif %}
