--- a/vote/templates/vote.html
+++ b/vote/templates/vote.html
@@ -1,4 +1,48 @@
 {% extends "base.html" %}
 {% block content %}
 
+<script type="text/javascript" src="{{url_for('static', filename='sortable/Sortable.js')}}"></script>
+
+<!--
+Submits via a simple, normal submit button.
+Form also contains a hidden field: "ballot".
+Whenever the sort order of the ballot list is updated, the hidden field should trigger an update.
+-->
+
+<div style="width: 40%; float: left; left: 5%;">
+	<div class="header">Available</div>
+	<div id="available">
+		{% for category, items in options.items() %}
+			<div>{{category}}
+				<div id="{{category}}">
+					{% for i in items %}
+						<div>{{i}}</div>
+					{% endfor %}
+				</div>
+			</div>
+		{% endfor %}
+	</div>
+</div>
+
+<div style="width: 40%; float: right; right: 5%;">
+	<div class="header">Ballot</div>
+	<div id="votes">
+		<div>Test</div>
+		<div>Test</div>
+	</div>
+</div>
+
+<form method="POST" id="form">
+	{{form.hidden_tag()}}
+	<input type="submit"/>
+</form>
+
+<script type="text/javascript">
+	var available = document.getElementById('available');
+	Sortable.create(available, {group: 'columns'});
+
+	var votes = document.getElementById('votes');
+	Sortable.create(votes, {group: 'columns'});
+</script>
+
 {% endblock %}
