--- a/vote/templates/login.html
+++ b/vote/templates/login.html
@@ -1,17 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-	<div class="text">
+	<div style="width: 320px; margin: auto;">
 		<form action="" method="POST" name="login">
 			{{form.hidden_tag()}}
 
-			<!--<div style="margin-top: 20px; height: 50px">-->
-				<div class="wide right" style="height: 30px;">{{form.username(autofocus=True)}}</div>
-				<div class="narrow left" style="height: 30px;">{{form.username.label}}</div>
-				<div class="wide right" style="height: 30px;">{{form.password}}</div>
-				<div class="narrow left" style="height: 30px;">{{form.password.label}}</div>
-				<div class="wide right"><input type="submit" value="Log In"></div>
-				<div class="narrow left">{{form.remember}} {{form.remember.label}}</div>
-			<!--</div>-->
+			<div class="wide right" style="height: 30px;">{{form.username(autofocus=True)}}</div>
+			<div class="narrow left" style="height: 30px;">{{form.username.label}}</div>
+			<div class="wide right" style="height: 30px;">{{form.password}}</div>
+			<div class="narrow left" style="height: 30px;">{{form.password.label}}</div>
+			<div class="narrow right"><input type="submit" value="Log In"></div>
+			<div class="wide left">{{form.remember}} {{form.remember.label}}</div>
 		</form>
 	</div>
 {% endblock %}
