--- a/vote/templates/results.html
+++ b/vote/templates/results.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="sortable-list">
+<div class="results-list">
 	{% for i in results %}
 		<div class="sortable-item{% if i.premium %} premium{% endif %}">{{i.name}} ({{i.category}})</div>
 	{% endfor %}
