--- a/vote/templates/results.html
+++ b/vote/templates/results.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 
+{% if info %}
+<div class="info">
+	{{ info|safe }}
+</div>
+{% endif %}
+
 <div class="results-list">
 	{% for i in results %}
 		<div class="sortable-item{% if i.premium %} premium{% endif %}">{{i.name}} ({{i.category}})</div>
