--- a/vote/templates/results.html
+++ b/vote/templates/results.html
@@ -3,7 +3,7 @@
 
 <div class="results-list">
 	{% for i in results %}
-		<div class="sortable-item{% if i.premium %} premium{% endif %}">{{i.name}} ({{i.category}})</div>
+	<div class="sortable-item{% if i.premium %} premium{% endif %}">{{i.name}}{% if i.category %} ({{i.category}}){% endif %}</div>
 	{% endfor %}
 </div>
 
