Improve consistency between Flask projects

--- a/vote/templates/login.html
+++ b/vote/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-	<div style="width: 320px; margin: auto;">
+	<div class="login">
 		<form action="" method="POST" name="login">
 			{{form.hidden_tag()}}
 
