--- a/vote/static/style.css
+++ b/vote/static/style.css
@@ -30,7 +30,6 @@ input[type="password"] {
 	width: 100%;
 	max-width: 800px;
 	margin: auto;
-	padding-top: 10px;
 }
 
 #title-buffer {
@@ -130,18 +129,23 @@ input[type="password"] {
 }
 
 .wide {
-	width: 65%;
+	width: 60%;
 	top: 0px;
 }
 
 .narrow {
-	width: 35%;
+	width: 40%;
 	top: 0px;
 }
 
 .right {
 	float: right;
 	text-align: right;
+}
+
+.login {
+	max-width: 320px;
+	margin: auto;
 }
 
 .form {
