--- a/vote/static/style.css
+++ b/vote/static/style.css
@@ -1,78 +1,17 @@
-body {
-	font-family: serif;
-	color: #ffffff;
-	background-color: #222222;
-	overflow-y:auto;
-	margin: 0px;
-}
-
-p {
-	margin: 0px;
-}
-
-input {
-	color: #ffffff;
-	background-color: transparent;
-	border: solid 1px #444444;
-}
-
-input[type="text"] {
-	width: 100%;
-}
-
-input[type="password"] {
-	width: 100%;
-}
-
-#content {
-	width: 100%;
-	max-width: 800px;
-	margin: auto;
-}
-
-#title-buffer {
-	width: 100%;
-	height: 52px;
-	top: 0px;
-	position: static;
-}
-
-#title-bar {
-	width: 100%;
-	top: 0px;
-	position: fixed;
-	background-color: #111111;
-	border-bottom: solid #444444;
-}
-
-#title {
-	width: 60%;
-	margin: auto;
-	font-variant: small-caps;
-	font-size: 200%;
-	text-align: center;
-	padding: 10px 0px;
-}
-
-#back {
-	width: calc(20% - 20px);
-	float: left;
-	text-align: left;
-	padding: 10px;
-}
-
-#user {
-	width: calc(20% - 20px);
-	float: right;
-	text-align: right;
-	padding: 10px;
+.center {
+    text-align: center;
 }
 
 .sortable-container {
 	float: left;
 	width: 46%;
-	margin-left: 2%;
-	margin-right: 2%;
+	margin: 0 2%;
+}
+
+.small-screen .sortable-container {
+    width: 90%;
+    margin: auto;
+    float: none;
 }
 
 .sortable-list {
@@ -105,45 +44,17 @@ input[type="password"] {
 	border: solid #444444;
 }
 
-.heading {
-	font-variant: small-caps;
-	font-size: 150%;
-	text-align: center;
-}
-
-.messages {
-	font-style: italic;
-	text-align: center;
-	margin: 10px 0px;
+.small-screen .results-list {
+    width: 90%;
 }
 
 .premium {
-	font-style: italic;
+	font-weight: bold;
 	color: #cccccc;
 }
 
 .new {
 	background-color: #292929;
-}
-
-.wide {
-	width: 60%;
-	top: 0px;
-}
-
-.narrow {
-	width: 40%;
-	top: 0px;
-}
-
-.right {
-	float: right;
-	text-align: right;
-}
-
-.login {
-	max-width: 320px;
-	margin: auto;
 }
 
 .form {
@@ -158,8 +69,7 @@ input[type="password"] {
 	padding-bottom: 20px;
 }
 
-a:link { text-decoration: none; color: #888888; }
-a:visited { text-decoration: none; color: #888888; }
-a:hover { text-decoration: none; color: #ffffff; }
-a:active { text-decoration: none; color: #888888; }
+#info {
+    display: none;
+}
 
