--- a/vote/templates/login.html
+++ b/vote/templates/login.html
@@ -1,15 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
-	<div class="login">
-		<form action="" method="POST" name="login">
-			{{form.hidden_tag()}}
 
-			<div class="wide right" style="height: 30px;">{{form.username(autofocus=True)}}</div>
-			<div class="narrow left" style="height: 30px;">{{form.username.label}}</div>
-			<div class="wide right" style="height: 30px;">{{form.password}}</div>
-			<div class="narrow left" style="height: 30px;">{{form.password.label}}</div>
-			<div class="narrow right"><input type="submit" value="Log In"></div>
-			<div class="wide left">{{form.remember}} {{form.remember.label}}</div>
-		</form>
-	</div>
+<div class="login">
+    <form id="login-form" action="" method="POST" name="login-form">
+        {{ form.hidden_tag() }}
+
+        <div class="username">{{ form.username.label }}{{ form.username(autofocus=True) }}</div>
+        <div class="password">{{ form.password.label }}{{ form.password }}</div>
+        <div class="submit">
+            {{ form.remember }}{{ form.remember.label }}
+            <input type="submit" value="Log In" />
+        </div>
+    </form>
+</div>
+
 {% endblock %}
+
